# scoring-matrices

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
data/: 3Di.mat  CMakeLists.txt  PFASUM31.mat  PFASUM43.mat  PFASUM45.mat  PFASUM51.mat  PFASUM59.mat  PFASUM60.mat  PFASUM67.mat  PFASUM78.mat  VTML10.mat  VTML120.mat  VTML160.mat  VTML20.mat  VTML40.mat  VTML80.mat
docs/: api.rst  conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: index.rst  scoring_matrix.rst
docs/guide/: copyright.rst  index.rst  install.rst  matrices.rst
pkg/aur/: PKGBUILD.in
scoring_matrices/: .gitignore  __init__.pxd  __init__.py  lib.pxd  lib.pyi  lib.pyx
scoring_matrices/tests/: __init__.py  test_scoring_matrix.py
src/: CMakeLists.txt
src/scoring_matrices/: CMakeLists.txt  __init__.py  _version.py  lib.pxd  lib.pyi  lib.pyx  matrices.pxd
src/scoring_matrices/tests/: __init__.py  test_doctest.py  test_scoring_matrix.py
src/scripts/: generate_matrices.py
src/scripts/cmake/: CythonExtension.cmake
